4th commit - style edit

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <link rel="stylesheet" href="main.css">
 </head>
 
-<body>
+<body style="background: #cacac2;">
     <button id="btnNew">New Note</button>
     <span class="yellow box"></span>
     <span class="pink box"></span>
     <span class="peach box"></span>
     <span class="blue box"></span>
-    <div id="container"></div>
+    <div id="container" ></div>
     <script src="main.js" defer></script> 
 </body>
 
