changed delete to button

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <span class="peach box"></span>
     <span class="blue box"></span>
     <div id="container" ></div>
-    <script src="main.js" defer></script> 
+    <script src="main.js" ></script> 
 </body>
 
 </html>
