added drag end save

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <span class="pink box"></span>
     <span class="peach box"></span>
     <span class="blue box"></span>
+    <span id="trashCan" class="trash red">Trash</span>
+
     <div id="container" ></div>
     <script src="main.js" ></script> 
 </body>
